# labelbuddy

./: .gitattributes  .gitignore  404.html  CMakeLists.txt  Doxyfile  Makefile  README.md  documentation.adoc  documentation.html  index.adoc  index.html  installation.adoc  installation.html  labelbuddy.pro  manpage.html  resources.qrc  screenshots.html  sitemap.xml  test_resources.qrc
.github/workflows/: build_appimage.yml  build_deb_packages.yml  build_debian_packages.yml  build_macos.yml  build_source_package.yml  build_windows.yml  test.yml
_/css/: site.css
_/js/: site.js
data/: labelbuddy.desktop  welcome_message.html
data/icons/: labelbuddy.icns
data/windows_installer/: startmenu.pro
docs/: Description  Makefile  README.adoc  README.rst  add_nav.xsl  antora.yml  antora.yml.template  changelog  docinfo.html  documentation.html  documentation.md  extended-description  index.adoc  installation.adoc  keybindings.html  labelbuddy.1  list_examples.sh  manpage.adoc  screenshots.adoc  short-readme.txt
docs/demo_data/: example_documents.json  hello_annotations.txt  make_example_docs.py  wikipedia_language_ar.txt  wikipedia_language_el.txt  wikipedia_language_en.txt  wikipedia_language_zh.txt
docs/example_data/: docs.csv  documentation.txt  example_documents.json  example_labels.json  example_labels.txt  exported_docs.xml  hello_annotations.txt  index.adoc  labels.csv  labels.txt  make_example_docs.py  make_examples.py  wikipedia_language_ar.txt  wikipedia_language_el.txt  wikipedia_language_zh.txt
docs/man/: labelbuddy.1
docs/schema/: index.adoc
example_data/: docs.txt  docs.xml  exported_docs.json  exported_labels.csv  exported_labels.json  index.html  labels.xml
labelbuddy/0.0.10/: index.html
labelbuddy/0.0.10/_attachments/: exported_docs.json  exported_docs.jsonl
labelbuddy/0.0.10/documentation/: index.html
labelbuddy/0.0.10/examples/: index.html
labelbuddy/0.0.10/installation/: index.html
labelbuddy/0.0.10/manpage/: index.html
labelbuddy/0.0.10/screenshots/: index.html
labelbuddy/0.0.11/: index.html
labelbuddy/0.0.11/documentation/: index.html
labelbuddy/0.0.11/examples/: index.html
labelbuddy/0.0.11/installation/: index.html
labelbuddy/0.0.11/keybindings/: index.html
labelbuddy/0.0.11/manpage/: index.html
labelbuddy/0.0.11/screenshots/: index.html
labelbuddy/0.0.7/: index.html
labelbuddy/0.0.7/_attachments/: annotations.json  docs.json  labels.rng  wiki_extracts_documents.json
labelbuddy/0.0.7/documentation/: index.html
labelbuddy/0.0.7/examples/: index.html
labelbuddy/0.0.7/installation/: index.html
labelbuddy/0.0.7/manpage/: index.html
labelbuddy/0.0.7/screenshots/: index.html
labelbuddy/0.0.7/xml_schema/: index.html
labelbuddy/0.0.8/: index.html
labelbuddy/0.0.8/_attachments/: annotations.json  exported_docs.jsonl  exported_labels.json  labels.jsonl
labelbuddy/0.0.8/documentation/: index.html
labelbuddy/0.0.8/examples/: index.html
labelbuddy/0.0.8/installation/: index.html
labelbuddy/0.0.8/manpage/: index.html
labelbuddy/0.0.8/screenshots/: index.html
labelbuddy/0.0.9/: index.html
labelbuddy/0.0.9/_attachments/: wiki_extracts_documents.json
labelbuddy/0.0.9/documentation/: index.html
labelbuddy/0.0.9/examples/: index.html
labelbuddy/0.0.9/installation/: index.html
labelbuddy/0.0.9/manpage/: index.html
labelbuddy/0.0.9/screenshots/: index.html
labelbuddy/current/: index.html
labelbuddy/current/_attachments/: exported_docs.json  exported_docs.jsonl  exported_labels.xml
labelbuddy/current/documentation/: index.html
labelbuddy/current/examples/: index.html
labelbuddy/current/installation/: index.html
labelbuddy/current/keybindings/: index.html
labelbuddy/current/manpage/: index.html
labelbuddy/current/screenshots/: index.html
labelbuddy/current/xml_schema/: index.html
schema/: index.html
scripts/: build_appimage.sh  build_deb.sh  build_deb_install_deps.sh  build_dmg.sh  build_source_tarball.sh  build_windows.py  build_windows_installer.py  debian_install_deps.sh
src/: annotations_list.cpp  annotations_list.h  annotations_list_model.cpp  annotations_list_model.h  annotations_model.cpp  annotations_model.h  annotator.cpp  annotator.h  char_indices.cpp  char_indices.h  char_indices.tpp  compat.cpp  compat.h  csv.cpp  csv.h  database.cpp  database.h  database_impl.h  dataset_menu.cpp  dataset_menu.h  doc_list.cpp  doc_list.h  doc_list_model.cpp  doc_list_model.h  import_export_menu.cpp  import_export_menu.h  label_list.cpp  label_list.h  label_list_model.cpp  label_list_model.h  main.cpp  main_window.cpp  main_window.h  no_deselect_all_view.cpp  no_deselect_all_view.h  searchable_text.cpp  searchable_text.h  user_roles.h  utils.cpp  utils.h
test/: main.cpp  test_annotations_list.cpp  test_annotations_list.h  test_annotations_list_model.cpp  test_annotations_list_model.h  test_annotations_model.cpp  test_annotations_model.h  test_annotator.cpp  test_annotator.h  test_char_indices.cpp  test_char_indices.h  test_csv.cpp  test_csv.h  test_database.cpp  test_database.h  test_dataset_menu.cpp  test_dataset_menu.h  test_doc_list.cpp  test_doc_list.h  test_doc_list_model.cpp  test_doc_list_model.h  test_import_export_menu.cpp  test_import_export_menu.h  test_label_list.cpp  test_label_list.h  test_label_list_model.cpp  test_label_list_model.h  test_main_window.cpp  test_main_window.h  test_searchable_text.cpp  test_searchable_text.h  test_utils.cpp  test_utils.h  testing_utils.cpp  testing_utils.h
test/data/: documents.json  documents.jsonl  documents.txt  documents.xml  labels.json  test_documents.json  test_labels.json
test/data/example_csv/: bom.py  example1-noerror-5-4-in.csv  example1-out.csv  example1dos-noerror-5-4-in.csv  example1dos-out.csv  example2-error-3-4-in.csv  example2-out.csv  make_output_files.py  nonewline-out.csv  nonewlinequoted-noerror-2-2-in.csv  nonewlinequoted-out.csv
test/data/invalid_files/: annotations_0.jsonl  (+9 more)
test_cli/: README.md  data_gen.py  make_newsgroups_docs.py  prepare_realistic_size_data.py  requirements.txt  test_labelbuddy_cli.py
(+27 files in other folders)
